<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/post_item_text_view"
        android:id="@+id/postItemTextView" />

    <EditText
        android:id="@+id/postItemEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/post_item_hint"
        android:maxLength="30"
        android:padding="10dp" />

    <TextView
        android:id="@+id/characterCounterTextView"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:text="@string/character_count_placeholder"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_gravity="right" />
</LinearLayout>