<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.orbital2015.mingle.UpdateProfileActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_text_view"
        android:id="@+id/nameTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditText"
        android:layout_below="@+id/nameTextView"
        android:layout_alignLeft="@+id/nameTextView"
        android:layout_alignStart="@+id/nameTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/date_of_birth_text_view"
        android:id="@+id/dateOfBirthTextView"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/nameEditText"
        android:layout_alignLeft="@+id/nameEditText"
        android:layout_alignStart="@+id/nameEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nationality_text_view"
        android:id="@+id/textView2"
        android:layout_marginTop="84dp"
        android:layout_below="@+id/dateOfBirthTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nationalityEditText"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/dateOfBirthTextView"
        android:layout_alignRight="@+id/nameEditText"
        android:layout_alignEnd="@+id/nameEditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_profile_picture_button_text_view"
        android:id="@+id/setProfilePictureButton"
        android:layout_below="@+id/dateOfBirthTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:layout_toLeftOf="@+id/dateOfBirthTextView"
        android:layout_toStartOf="@+id/dateOfBirthTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gender_text_view"
        android:id="@+id/genderTextView"
        android:layout_below="@+id/nationalityEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/genderTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/genderRadioGroup">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_radio_text_view"
            android:id="@+id/maleRadioButton"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_radio_text_view"
            android:id="@+id/femaleRadioButton"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_gender_radio_text_view"
            android:id="@+id/otherGenderRadioButton"
            android:checked="false" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/description_text_view"
        android:id="@+id/textView4"
        android:layout_below="@+id/genderRadioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_below="@+id/textView4"
        android:layout_alignRight="@+id/nameEditText"
        android:layout_alignEnd="@+id/nameEditText"
        android:layout_marginTop="27dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_profile_button_text_view"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_marginBottom="28dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/date_input_hint"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_below="@+id/dateOfBirthTextView"
        android:layout_toRightOf="@+id/setProfilePictureButton"
        android:layout_toEndOf="@+id/setProfilePictureButton" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profilePictureImageView"
        android:src="@mipmap/ic_launcher"
        android:layout_toLeftOf="@+id/nameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/editText4" />


</RelativeLayout>