<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.orbital2015.mingle.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_username_text"
        android:id="@+id/loginUsernameText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="37dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="58dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/loginUsernameEditText"
        android:layout_below="@+id/loginUsernameText"
        android:layout_alignLeft="@+id/loginUsernameText"
        android:layout_alignStart="@+id/loginUsernameText"
        android:layout_marginTop="29dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_password_text"
        android:id="@+id/loginPasswordText"
        android:layout_below="@+id/loginUsernameEditText"
        android:layout_alignLeft="@+id/loginUsernameEditText"
        android:layout_alignStart="@+id/loginUsernameEditText"
        android:layout_marginTop="29dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:text="@string/login_password_edit_text_view"
        android:id="@+id/loginPasswordEditText"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/loginPasswordText"
        android:layout_alignStart="@+id/loginPasswordText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text_view"
        android:id="@+id/loginButton"
        android:layout_below="@+id/loginPasswordEditText"
        android:layout_alignLeft="@+id/loginPasswordEditText"
        android:layout_alignStart="@+id/loginPasswordEditText"
        android:layout_marginTop="57dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_text_view"
        android:id="@+id/signUpButton"
        android:layout_alignBottom="@+id/loginButton"
        android:layout_toRightOf="@+id/loginUsernameText"
        android:layout_toEndOf="@+id/loginUsernameText" />
</RelativeLayout>
