<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonContainer"
        android:weightSum="3">

        <Button
            android:id="@+id/nearbyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:layout_alignParentBottom="true"
            android:text="@string/nearby_button_text_view" />

        <Button
            android:id="@+id/chatButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/nearbyButton"
            android:text="@string/chat_button_text_view"/>

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/chatButton"
            android:text="@string/settings_button_text_view"/>
    </LinearLayout>

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="#fffafafa"
        android:id="@+id/usersListView"
        android:layout_alignRight="@+id/mingleButton"
        android:layout_alignEnd="@+id/mingleButton"
        android:layout_below="@+id/buttonContainer"
        android:layout_above="@+id/mingleButton"
        android:visibility="gone">
    </ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/no_nearby_text_view"
        android:id="@+id/noNearbyTextView"
        android:gravity="center"
        android:layout_below="@+id/buttonContainer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nearby_instruction"
        android:id="@+id/nearbyInstructionTextView"
        android:gravity="center"
        android:layout_below="@+id/buttonContainer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mingle"
        android:id="@+id/mingleButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/posted_text_view"
        android:id="@+id/postedTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/usersListView"
        android:layout_alignBottom="@+id/mingleButton"
        android:layout_toLeftOf="@+id/refreshListButton"
        android:layout_toStartOf="@+id/refreshListButton"
        android:visibility="gone"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Refresh"
        android:id="@+id/refreshListButton"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/mingleButton"
        android:layout_toStartOf="@+id/mingleButton"
        android:visibility="gone"/>

</RelativeLayout>