<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.orbital2015.mingle.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sign_up_username_text_view"
        android:id="@+id/signUpUsernameTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sign_up_password_text_view"
        android:id="@+id/signUpPasswordTextView"
        android:layout_marginTop="63dp"
        android:layout_below="@+id/signUpUsernameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sign_up_confirm_password_text_view"
        android:id="@+id/signUpConfirmPasswordTextView"
        android:layout_below="@+id/signUpPasswordTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="66dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpUserNameEditText"
        android:layout_below="@+id/signUpUsernameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/signUpPasswordEditText"
        android:layout_alignEnd="@+id/signUpPasswordEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signUpPasswordEditText"
        android:layout_below="@+id/signUpPasswordTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/signUpConfirmPasswordEditText"
        android:layout_alignEnd="@+id/signUpConfirmPasswordEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signUpConfirmPasswordEditText"
        android:layout_below="@+id/signUpConfirmPasswordTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_text_view"
        android:id="@+id/signUpButton"
        android:layout_below="@+id/signUpConfirmPasswordEditText"
        android:layout_alignRight="@+id/signUpConfirmPasswordEditText"
        android:layout_alignEnd="@+id/signUpConfirmPasswordEditText"
        android:layout_marginTop="74dp" />

</RelativeLayout>
